Update address related routes to /address path
