# src/api-serverless/openapi.yaml
@@ -178,7 +178,7 @@ paths:
                     type: integer
                     description: The latest block number associated with the update.
 
-  /tdh/{address}:
+  /address/{address}:
     get:
       tags:
         - TDH by Address
@@ -226,7 +226,7 @@ paths:
                     type: integer
                     description: The latest block number associated with the update.
 
-  /tdh/{address}/breakdown:
+  /address/{address}/breakdown:
     get:
       tags:
         - TDH by Address
@@ -298,7 +298,7 @@ paths:
                     type: integer
                     description: The latest block number associated with the update.
 
-  /tdh/{address}/memes_seasons:
+  /address/{address}/memes_seasons:
     get:
       tags:
         - TDH by Address
@@ -339,7 +339,7 @@ paths:
                     type: integer
                     description: The latest block number associated with the update.
 
-  /tdh/{address}/memes_seasons/{id}:
+  /address/{address}/memes_seasons/{id}:
     get:
       tags:
         - TDH by Address
